# DA-Projects

./: .gitignore  CMakeLists.txt  README.md  Untitled Document 1  clear.sh  encomendas.txt  main.cpp  permisson.sh
1st_project/: .gitignore  CMakeLists.txt
1st_project/include/: Courier.h  Interface.h  Scenario2.h
1st_project/src/: Courier.cpp  Data.cpp  Interface.cpp  Product.cpp  Scenario1.cpp  Scenario2.cpp  Scenario3.cpp  main.cpp
2nd_project/: .gitignore  CMakeLists.txt
2nd_project/include/: menu.h  scenario1.h  scenario2.h
2nd_project/src/: graph.cpp  main.cpp  menu.cpp  scenario1.cpp  scenario2.cpp
Classes/: Data.cpp  Data.h  Scenario1.cpp  Scenario1.h  Scenario2.cpp  Scenario2.h  graph.cpp  graph.h  menu.cpp  menu.h
Tests/: Algorithms.cpp  Algorithms.h  Courier.cpp  Courier.h  Data.cpp  Data.h  Product.cpp  Product.h
files/Tests_B/: in01_b.txt
include/: Algorithms.h  Courier.h  Data.h  Interface.h  Product.h  Scenario1.h  Scenario2.h  Scenario3.h
output/html/: _courier_8h_source.html  _data_8h_source.html  _interface_8h_source.html  _product_8h_source.html  _scenario1_8h_source.html  _scenario2_8h_source.html  _scenario3_8h_source.html  annotated.html  class_courier-members.html  class_courier.html  class_data-members.html  class_data.html  class_interface-members.html  class_interface.html  class_product-members.html  class_product.html  class_scenario1-members.html  class_scenario1.html  class_scenario2-members.html  (+10 more)
src/: Algorithms.cpp  Courier.cpp  Data.cpp  Interface.cpp  Product.cpp  Scenario1.cpp  Scenario2.cpp  Scenario3.cpp  main.cpp
(+21 files in other folders)
